More citations and better spelling

--- a/main.tex
+++ b/main.tex
@@ -164,7 +164,7 @@ Instead of having a single mainnet which suffers from the problems mentioned abo
 \textbf{Motivation for Independent Consensus}
 \end{center}
 
-What makes blockchain technology work is the fact that miners are independent actors that verify transactions that occur so it is near impossible to inject false information into the chain. However, in traditional settings, miners are rewarded in cryptocurrency from transaction fees. Because transactions are free on the Hadron protocol, a different rewarding mechanism must be instilled so that miners are still motivated to provide independent verification of transactions.
+What makes blockchain technology work is the fact that miners are independent actors that verify transactions that occur so it is near impossible to inject false information into the chain. However, in traditional settings, miners are rewarded in cryptocurrency from transaction fees. Because transactions are free on the Hadron protocol, a different rewarding mechanism must be instilled so that miners are still motivated to provide independent verification of transactions\cite{verifincent}.
 
 It is possible to create proof-of-work, proof-of-stake, and any other rewarding schemes by using smart contracts. In this way, a smart contract can be called upon to calculate the reward and recipient, and reward any type of asset on the chain. Instead of just the native currency of the chain (which is initially Ether), ERC20 tokens or novel cryptoasset implementations can be rewarded as well, providing even more customization to private chains. And because transactions and gas is free on the networks, calling a contract one a block, for example, is not expensive.
 
@@ -204,7 +204,7 @@ The Hadron Wrapper is taking design queues from other package management CLI (Co
 
 The initial blockchain technology that we are implementing is Ethereum, and so developers will be able to initialize these chains, create accounts, mine blocks, and deploy contracts in a sub-processed instance of \texttt{geth}, Ethereum’s client written in Go.
 
-By abstracting the main interaction components away from \texttt{geth} into a CLI tool, we are able to then provide a RESTful API service for interacting with these private chains. A RESTful API allows for blockchains to be interacted with across the Internet in literally any programming language interface. If a programming language supports HTTP requests, they will be able to interact with Hadron generated private chains. This allows integration into any tech stack, and allows us to create drop in libraries for many modern language frameworks such as Swift for iOS development, Java for Android development, and even embedded C for Internet of Things applications.
+By abstracting the main interaction components away from \texttt{geth} into a CLI tool, we are able to then provide a RESTful API service for interacting with these private chains. A RESTful API allows for blockchains to be interacted with across the Internet in any programming language interface. If a programming language supports HTTP requests, they will be able to interact with Hadron generated private chains. This allows integration into any tech stack, and allows us to create drop in libraries for many modern language frameworks such as Swift for iOS development, Java for Android development, and even embedded C for Internet of Things applications.
 
 Furthermore, the Hadron Wrapper will provide a local server with an Ethereum blockchain explorer that can be public facing so that the wider community can monitor and see the activity occurring on the chain.
 
@@ -226,13 +226,13 @@ Beyond creating a private chain instance, the Hadron Wrapper contains the necess
 
 If the Hadron Wrapper component can achieve these functionalities, then the internal blockchain driver does not have to be based off of Ethereum. Into the future, the Hadron Wrapper will support arbitrary blockchain technologies such as Bitcoin, Litecoin, Zcash, Monero, Neo, Tezos, Eos, and more as long as they can support payment channels in a trustless fashion. Even novel blockchain technologies that adhere to the wrapper protocol will be supported, creating a completely custom blockchain-to-blockchain interfacing network.
 
-The Wrapper will ultimately support any blockchain technology as long as it adheres to certain specifications so that it can interact with the Hadron Ledger. This futureproofs the Hadron system so that no matter what technologies exist in the future, there will always be a network to interact with them. This also solves the problem of blockchain migration, as businesses, enterprises, and applications can upgrade to the latest blockchain projects and technology as they come out to keep ahead of the competition.
+The Wrapper will ultimately support any blockchain technology as long as it adheres to certain specifications so that it can interact with the Hadron Ledger. This future-proofs the Hadron system so that no matter what technologies exist in the future, there will always be a network to interact with them. This also solves the problem of blockchain migration, as businesses, enterprises, and applications can upgrade to the latest blockchain projects and technology as they come out to keep ahead of the competition.
 
 \begin{center}
 \textbf{The Hadron Hub}
 \end{center}
 
-Apart from simple blockchain generation, the main driver of technology adoption is not the base use cases of the core tech, but rather the surrounding communities and feature-sets built by them. You can see this with the Ethereum community, and more with newer smart contract systems that are starting to spur innovation. Their cryptocurrency mechanisms are not what sets them apart from Bitcoin or Litecoin. Instead it is the development community surrounding and developing smart contract applications that affords wider adoption.
+Apart from simple blockchain generation, the main driver of technology adoption is not the base use cases of the core tech, but rather the surrounding communities and feature-sets built by them. You can see this with the Ethereum community, and more with newer smart contract systems that are starting to spur innovation. Their cryptocurrency mechanisms are not what sets them apart from Bitcoin or Litecoin. Instead it is the development community surrounding and developing smart contract applications that affords wider adoption\cite{techecosystems}.
 
 Similarly, package repositories that allow users to pull in packages from the wider community, comment on them, and even develop for them solidifies a base of intellectual capital that leads to the success of the project and greater innovation in the field.
 
@@ -298,7 +298,7 @@ The main technological feat of the Hadron project is its cryptographic ledger an
 
 The Hadron Ledger is primarily the infrastructure that links private chains together over a common protocol, much like a telephone network. The Ledger takes care of interaction between all chains and provides a common set of interface options to that chains can be treated the same ways in computer programming environments and platforms for further integration away from the Hadron Hub.
 
-A main value add of the Hadron Ledger is the absence of transaction fees. In exchange for the benefits of connection to the Hadron Hub and exposing a private chain to the wider community which increases public adoption, a private chain dedicates a certain amount of computing power to the ledger overall. Because the ledger is absent of difficult hashing functions, and serves merely as an intermediary to process packets of information between chains. The computing load to connect and serve information is comparable to a modern day web server rather than a standard blockchain miner. Blockchain application providers expose a single public entry point onto the IPFS and distributed computing cluster for incoming transactions, and connect to the public Ledger node for outgoing transactions.
+A main value add of the Hadron Ledger is the absence of transaction fees. In exchange for the benefits of connection to the Hadron Hub and exposing a private chain to the wider community which increases public adoption, a private chain dedicates a certain amount of computing power to the ledger overall. Because the ledger is absent of difficult hashing functions, and serves merely as an intermediary to process packets of information between chains. The computing load to connect and serve information is comparable to a modern day web server rather than a standard blockchain miner\cite{bigchaindb}. Blockchain application providers expose a single public entry point onto the IPFS and distributed computing cluster for incoming transactions, and connect to the public Ledger node for outgoing transactions.
 
 \begin{center}
 \textbf{Payment Channels for Cross-Chain Transactions}
@@ -306,7 +306,7 @@ A main value add of the Hadron Ledger is the absence of transaction fees. In exc
 
 While retaining a trustless and decentralized system, it is required for a system of cross-chain payments to exist so that blockchain applications can interact with each other freely. This is the main draw of the Hadron Ledger. To do so, the Ledger implements Lightning Network\cite{lightning} inspired payment channels to provide a secure and decentralized method of exchanging funds across blockchains. Transactions initiate from private chains, and utilize the Ledger as a public service for managing secure and guaranteed remittance of funds from chain to chain.
 
-The Ledger is a public service that distributes the work of smart contract deployment and identity verification for chain to chain transfers between participants connected to the main network. Private chains are free to implement their own methods by which to transfer funds to each other, but the public Ledger is verifiable by consensus of participants on the wider network, thus providing a stronger sense of trust to cross chain transactions.
+The Ledger is a public service that distributes the work of smart contract deployment and identity verification for chain to chain transfers between participants connected to the main network. Private chains are free to implement their own methods by which to transfer funds to each other, but the public Ledger is verifiable by consensus of participants on the wider network\cite{raftconsensus}, thus providing a stronger sense of trust to cross chain transactions.
 
 Payment channels are represented in pure Solidity smart contract code that run on each private blockchain. When a user wants to initiate a swap, they send a request both the Hadron Ledger service and the chain they want to swap with outlining the terms of their expected transfer. The request is comprised of the sender and receiver address on both chains, as well as the value of the asset being swapped. For example, a payload would look like this:
 
@@ -357,9 +357,9 @@ When the computing cluster receives this payload, the cluster will compile the S
 
 If the originator chain fails to deploy their contract while the recipient chain follows through, the contract on the recipient chain will self-destruct and remit funds back to their account. On the flip side, if the originator sets up a contract, but the recipient does not agree to the terms, the originators contract will be destroyed they will receive their locked up funds. 
 	
-Assuming that both parties are interested pursuing the swap, they must then follow through with the agreed upon obligations on each others’ chains, which executes the payment channel regularly.
+Assuming that both parties are interested pursuing the swap, they must then follow through with the agreed upon obligations on each others’ chains, which executes the payment channel regularly\cite{stellarconsensus}.
 
-To make sure that the payments have been sent through in a timely fashion, each chain can ‘ping’ their contracts which invokes a time lock method. If the contract is too many blocks behind the agreed upon time lock, it is assumed that the other party is not going to finalize the payment channel, and the contract is destroyed. This incentives the opposing party to follow through with their obligations because they risk losing their funds. It also incentives the originator to ping their contract as soon as possible, because in the situation where the originator has received funds on the opposing chain but not on their chain, they can remit their funds back to themselves and in effect have gained ‘free’ assets on the opposing chain because the time lock had expired on their own to claim the assets.
+To make sure that the payments have been sent through in a timely fashion, each chain can ‘ping’ their contracts which invokes a time-lock method\cite{timelockpuz}. If the contract is too many blocks behind the agreed upon time-lock, it is assumed that the other party is not going to finalize the payment channel, and the contract is destroyed. This incentives the opposing party to follow through with their obligations because they risk losing their funds. It also incentives the originator to ping their contract as soon as possible, because in the situation where the originator has received funds on the opposing chain but not on their chain, they can remit their funds back to themselves and in effect have gained ‘free’ assets on the opposing chain because the time-lock had expired on their own to claim the assets.
 
 \begin{figure}[H]
 \centering
@@ -386,7 +386,7 @@ Now, you can integrate your other software on top of the blockchain such as a pu
 \textbf{Maintaining Distributed and Trustless System Architecture}
 \end{center}
 
-While private chains on Hadron are built off of Ethereum which is a distributed and trustless protocol, the rest of the Hadron systems could be developed using standard centralized server-client architecture. However, while this is potentially an easier method of execution, standard HTTP protocol is vulnerable to DDOS attacks, server failure, and centralized ownership of data that sacrifices the rights of the collaborators of the project.
+While private chains on Hadron are built off of Ethereum which is a distributed and trustless protocol, the rest of the Hadron systems could be developed using standard centralized server-client architecture. However, while this is potentially an easier method of execution, standard HTTP protocol is vulnerable to DDOS attacks, server failure, and centralized ownership of data that sacrifices the rights of the collaborators of the project\cite{symantecreport}.
 
 Thus, the project will be deployed upon the IPFS protocol to establish a true peer to peer system that is distributed and trustless.
 
