--- a/references.bib
+++ b/references.bib
@@ -93,6 +93,73 @@
 @article{lightning,
     author = "Joseph Poon",
     title = "{The} {Bitcoin} {Lightning} {Network}: {Scalable} {Off}-{Chain} {Instant} {Payments}",
-    year = "January 14, 2016",
-    note = "Retrieved from: \url{https://lightning.network/lightning-network-paper.pdf}"
+    year = "2016",
+    note = "Retrieved from: \url{https://lightning.network/lightning-network-paper.pdf/}"
+}
+
+@article{verifincent,
+  author    = {Moshe Babaioff and
+               Shahar Dobzinski and
+               Sigal Oren and
+               Aviv Zohar},
+  title = {On Bitcoin and Red Balloons},
+  journal = {CoRR},
+  volume = {abs/1111.2626},
+  year = {2011}
+}
+
+@techreport{techecosystems,
+  author = {Colin Mason and
+               Ross Brown},
+  title = {Entrepreneurial ecosystems and growth oriented entrepreneurship},
+  pages	= {12--14},
+  institution   = {OECD},
+  year = {2014}
+}
+
+@article{bigchaindb,
+    author = "Trent McConaghy and others",
+    title = "{BigchainDB}: {A} Scalable Blockchain Database",
+    year = "2016",
+    pages = "31--41",
+    note = "Retrieved from: \url{https://bravenewcoin.com/assets/Whitepapers/bigchaindb-whitepaperDRAFT.pdf/}"
+}
+
+@techreport{raftconsensus,
+	author = "Diego Ongaro and John Ousterhout",
+	title = "In search of an understandable {Consensus} algorithm",
+	institution = "Stanford University",
+	year = "2013",
+	note = "Retrieved from: \url{https://raft.github.io/raft.pdf/}"
+}
+
+@techreport{stellarconsensus,
+	author = "David Mazières",
+	title = "The {Stellar} {Consensus} {Protocol}: {A} federated model for {Internet}-level {Consensus}",
+	institution = "Stellar Development Foundation",
+	pages = "13--18",
+	year = "2015",
+	note = "Retrieved from: \url{https://www.stellar.org/papers/stellar-consensus-protocol.pdf/}"
+}
+
+@InProceedings{timelockpuz,
+	author = "Mohammad Mahmoody and Tal Moran and Salil Vadhan",
+	title = "{Time}-{Lock} Puzzles in the {Random} {Oracle} {Model}",
+	booktitle = "{Annual} {Cryptology} {Conference}",
+	year = "2011",
+	editor = "Phillip Rogaway",
+	volume = "6841",
+	pages = "39--50",
+	publisher = "Springer"
+}
+
+@report{symantecreport,
+	author = "Symantec",
+	title = "{Internet} {Security} {Threat} {Report}",
+	institution = "Symantec",
+	pages = "19--27",
+	volume = "21",
+	month = "April",
+	year = "2016",
+	note = "Retrieved from: \url{https://www.symantec.com/content/dam/symantec/docs/reports/istr-21-2016-en.pdf/}"
 }
